force-app/main/default/objects/Location_Address_Book__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <description>User City Addres</description>
    <inlineHelpText>Enter Your City</inlineHelpText>
    <label>City</label>
    <length>15</length>
    <type>Text</type>
</CustomField>