force-app/main/default/objects/Location_Address_Book__c/fields/Landmark__c.field-meta.xml
<CustomField>
    <fullName>Landmark__c</fullName>
    <description>LandMark of User</description>
    <inlineHelpText>Please Enter your landmark</inlineHelpText>
    <label>Landmark</label>
    <length>250</length>
    <type>Text</type>
</CustomField>