force-app/main/default/objects/Location_Address_Book__c/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <description>Residing State</description>
    <inlineHelpText>Please Enter Your State Name</inlineHelpText>
    <label>State</label>
    <length>15</length>
    <type>Text</type>
</CustomField>