force-app/main/default/objects/Location_Address_Book__c/fields/Street__c.field-meta.xml
<CustomField>
    <fullName>Street__c</fullName>
    <description>Street for location</description>
    <inlineHelpText>Give Your Street Address</inlineHelpText>
    <label>Street</label>
    <length>100</length>
    <type>Text</type>
</CustomField>