force-app/main/default/objects/Location_Address_Book__c/fields/Verified__c.field-meta.xml
<CustomField>
    <fullName>Verified__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Tells Whether user is verified or not?</description>
    <inlineHelpText>Check If you are Verified</inlineHelpText>
    <label>Verified?</label>
    <type>Checkbox</type>
</CustomField>